# space-walk

./: .gitignore  .gitmodules  LICENSE  readme.md
Unity/: .gitignore
Unity/source assets/: beacon.blend  beacon.blend1  beacon.blend2
Unity/telemetry-test/Assets/: Init.cs
Unity/telemetry-test/Assets/Editor/: DeveloperPreferences.cs
Unity/telemetry-test/Assets/Materials/: Beacon Light.mat  Colour Test.mat  base Level ground.mat  base Level.mat  beacon base.mat  monkey.mat  terrain shader.shader  uvtest.mat
Unity/telemetry-test/Assets/Plugins/: Constants.cs  CustomInputManager.cs  MathUtils.cs
Unity/telemetry-test/Assets/models/: beacon.fbx  monkey.fbx
Unity/telemetry-test/Assets/models/Materials/: green.mat
Unity/telemetry-test/Assets/prefabs/: Thingy.prefab  beacon.prefab
Unity/telemetry-test/Assets/scenes/: scene1.unity
Unity/telemetry-test/Assets/scripts/: Constants.cs  FPSInputController.js  Init.cs  MouseLook.cs  PlayerDebug.cs  RemoteScreenCapture.cs  SocketServer.cs  Telemetry.cs  TelemetryTest.cs  ThingyBehaviour.cs
Unity/telemetry-test/ProjectSettings/: InputManager.asset  ProjectSettings.asset  TagManager.asset
bridge/: bridge  bridge.js
client/: client.js  index.html  style.css  style.scss
doc/: protocol.md
documentation/: protocol.md
input-logger/: CMakeLists.txt  readme.md
input-logger/src/: CMakeLists.txt  TCPConnection.cpp  TCPConnection.hpp  TCPServer.cpp  TCPServer.hpp  main.cpp
mockup/: Space Walk Mock.ai  controller model.ai
objectif-lune/: .gitignore  license.txt  loadResource.js  readme.md
objectif-lune/client/: objectif-lune.htm  objectif-lune.js  style.css  style.scss  timer.js  util.js  viewer.htm  viewer.js
recorder/: recorder.js  session.json
recorder/sessions/: positions_2014-02-24_15-34-50.json  raw Wed Feb 12 2014 15:29:25 GMT+0100 (CET).json
server/: OLD_server.js  director.js  server.js
server/data/positions/: 1.json  positions_2014-02-24_15-15-48.json
server/static/: index.html
server/static/annotations/: annotations.js  index.html  video.html  video.js
server/static/css/: fontello.css  style.css
server/static/font/: fontello.eot
server/static/scss/: style.scss
server/templates/: listPositions.stache  listSessionCSV.stache  resoures.stache
server/transformers/: positionData.js  sessionCSV.js  transformers.md
space-walk/: lib-space-walk.js  recommended-plugins.json  space-walk.html  space-walk.js
space-walk/css/: base.css  documentation.css  style.css
space-walk/css/fontello/css/: space-walk.css
space-walk/css/fontello/font/: space-walk.eot
space-walk/javascript/: lib-space-walk.js  space-walk.js
space-walk/js/: documentation.js
space-walk/plugins/debug/: debug.html  debug.js  style.css
space-walk/plugins/mapper/: mapper.html  mapper.js
space-walk/scss/: base.scss  documentation.scss  style.scss
test-server/: test-server.js  test.js
tools/bridge/: bridge.js
tools/file-to-source/: index.html  script.js  style.css
tools/input-logger/: CMakeLists.txt
tools/input-logger-cpp/: CMakeLists.txt
tools/input-logger-cpp/src/: CMakeLists.txt  JoystickManager.cpp  JoystickManager.hpp  TCPConnection.cpp  TCPConnection.hpp  TCPServer.cpp  TCPServer.hpp  main.cpp
tools/input-logger-glfw/: CMakeLists.txt
tools/input-logger-glfw/src/: CMakeLists.txt  test.cpp
tools/input-logger-sdl2/: readme.md
tools/input-logger-sdl2/src/: JoystickManager.cpp  JoystickManager.hpp  compiler.h
tools/input-logger-unity/input logger/: .gitignore
tools/input-logger-unity/input logger/Assets/: banner.mat  green.mat  main.cs  main.unity  spin.cs  tile grey.mat  tile.mat
tools/input-logger-unity/input logger/Assets/telemetry/: SocketServer.cs  Telemetry.cs
tools/input-logger-unity/input logger/ProjectSettings/: InputManager.asset  ProjectSettings.asset
tools/input-logger-unity/tools/: createInputSettings.py
tools/input-logger/src/: CMakeLists.txt  JoystickManager.cpp  JoystickManager.hpp  TCPServer.cpp  TCPServer.hpp  data.cpp  data.hpp  main.cpp
tools/recorder/: recorder.js  test-generator.js
tools/test-server/: test-server.js
